manifest/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnettestapi
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnettestapi
  template:
    metadata:
      labels:
        app: dotnettestapi
    spec:
      containers:
        - name: dotnettestapi
          image: sekharinweb/dotnettestapi:1.69.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5140
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: "0"
              memory: "0"
