manifest/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: develop
  name: dotnettestapi-service
spec:
  selector:
    app: dotnettestapi
  ports:
    - name: http
      port: 80
      targetPort: 5140
