manifest/templates/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalog
spec:
  host: catalog.istioinaction.svc.cluster.local
  subsets:
    - name: version-v1
      labels:
        version: v1 ## Deployments should have this label as V1 and V2 to differentiate
    - name: version-v2
      labels:
        version: v2 ## Deployments should have this label as V1 and V2 to differentiate

--
## Corresponding Virtual servcie example 
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: catalog
        subset: version-v1
      weight: 90 ## Weight of trafic can be changed based on the requirement
    - destination:
        host: catalog
        subset: version-v2
      weight: 10

-- 
## Gateway example , with TLS and MTLS 




--
## Matching condition VS example 
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  gateways:
    - mesh
  http:
  - match:
    - headers:
        x-istio-cohort:
          exact: "internal" ## Request with this header should go to V2 
    route:
    - destination:
        host: catalog
        subset: version-v2
  - route:
    - destination:
        host: catalog
        subset: version-v1
--
## For more details cehck this : - https://github.com/istioinaction/book-source-code/blob/master/ch5/catalog-vs-v2-request-mesh.yaml
