manifest/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-svc
spec:
  hosts:
    - "*"
  gateways:
    - ext-host-gwy
  http:
    - route:
        - destination:
            host: dotnettestapi-service.develop.svc.cluster.local
            port:
              number: 80
